--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    implementation 'com.sparkjava:spark-core:2.9.3'
+    implementation 'com.sparkjava:spark-core:2.2'
     implementation 'com.sparkjava:spark-template-handlebars:2.7.1'
     implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation 'org.sql2o:sql2o:1.6.0'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    implementation 'org.sql2o:sql2o:1.5.4'
+    implementation 'org.postgresql:postgresql:9.4.1208'
 }
 
 test {
